force-app/main/default/objects/SharepointCredentialsInfo__c/SharepointCredentialsInfo__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Use to store share point credentials to be used in Phase 2.</description>
    <label>SharepointCredentials</label>
</CustomObject>