force-app/main/default/objects/SharepointCredentialsInfo__c/fields/realm__c.field-meta.xml
<CustomField>
    <fullName>realm__c</fullName>
    <label>realm</label>
    <length>255</length>
    <type>Text</type>
</CustomField>