force-app/main/default/objects/SharepointCredentialsInfo__c/fields/resource__c.field-meta.xml
<CustomField>
    <fullName>resource__c</fullName>
    <label>resource</label>
    <length>255</length>
    <type>Text</type>
</CustomField>