force-app/main/default/objects/SharepointCredentialsInfo__c/fields/SharepointTokenURL__c.field-meta.xml
<CustomField>
    <fullName>SharepointTokenURL__c</fullName>
    <label>SharepointTokenURL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>