force-app/main/default/objects/SharepointCredentialsInfo__c/fields/timezone__c.field-meta.xml
<CustomField>
    <fullName>timezone__c</fullName>
    <label>timezone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>